--- a/09_Nucleo-H743ZI_Ethernet.ioc
+++ b/09_Nucleo-H743ZI_Ethernet.ioc
@@ -45,37 +45,38 @@ Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin10=PC4
 Mcu.Pin11=PC5
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PG6
-Mcu.Pin17=PG7
-Mcu.Pin18=PC9
-Mcu.Pin19=PA8
+Mcu.Pin12=PB0
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin15=PD8
+Mcu.Pin16=PD9
+Mcu.Pin17=PG6
+Mcu.Pin18=PG7
+Mcu.Pin19=PC9
 Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13 (JTMS/SWDIO)
-Mcu.Pin25=PA14 (JTCK/SWCLK)
-Mcu.Pin26=PD5
-Mcu.Pin27=PG11
-Mcu.Pin28=PG13
-Mcu.Pin29=PB3 (JTDO/TRACESWO)
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13 (JTMS/SWDIO)
+Mcu.Pin26=PA14 (JTCK/SWCLK)
+Mcu.Pin27=PD5
+Mcu.Pin28=PG11
+Mcu.Pin29=PG13
 Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin30=PB7
-Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin32=VP_LWIP_VS_Enabled
-Mcu.Pin33=VP_SYS_VS_tim17
+Mcu.Pin30=PB3 (JTDO/TRACESWO)
+Mcu.Pin31=PB7
+Mcu.Pin32=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin33=VP_LWIP_VS_Enabled
+Mcu.Pin34=VP_SYS_VS_tim17
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA7
-Mcu.PinsNb=34
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -149,6 +150,10 @@ PA9.GPIO_Label=USB_VBUS
 PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=LD1 [Green]
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1
 PB13.Locked=true
