Add part for ethernet
	1. enable ICache
	2. enable ICMP
	3. change RAM Address

--- a/09_Nucleo-H743ZI_Ethernet.ioc
+++ b/09_Nucleo-H743ZI_Ethernet.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 CORTEX_M7.CPU_DCache=Enabled
-CORTEX_M7.IPParameters=CPU_DCache
+CORTEX_M7.CPU_ICache=Enabled
+CORTEX_M7.IPParameters=CPU_DCache,CPU_ICache
 ETH.IPParameters=MediaInterface,MACAddr
 ETH.MACAddr=98\:83\:89\:44\:FA\:EB
 ETH.MediaInterface=HAL_ETH_RMII_MODE
@@ -10,9 +11,11 @@ File.Version=6
 KeepUserPlacement=true
 LWIP.BSP.number=1
 LWIP.GATEWAY_ADDRESS=010.206.213.255
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,LWIP_BROADCAST_PING,LWIP_MULTICAST_PING
 LWIP.IP_ADDRESS=010.206.213.233
+LWIP.LWIP_BROADCAST_PING=1
 LWIP.LWIP_DHCP=0
+LWIP.LWIP_MULTICAST_PING=1
 LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.Version=v2.0.3_Cube
 LWIP0.BSP.STBoard=false
